--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,21 @@
 			<systemPath>${project.basedir}/libs/aliyun-java-sdk-dysmsapi-1.0.0.jar</systemPath>
 		</dependency>
 
+		<dependency>
+			<groupId>com.taobao</groupId>
+			<artifactId>com-taobao-sdk-core</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/taobao-sdk-java-auto_1486971200958-20180201.jar</systemPath>
+		</dependency>
+
+		<dependency>
+			<groupId>com.taobao</groupId>
+			<artifactId>com-taobao-sdk-source</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/taobao-sdk-java-auto_1486971200958-20180201-source.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
