--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -55,3 +55,6 @@ matcher=/apiCall/**
 ISOSTRconfigUrl=
 
 spring.mvc.dispatch-options-request=true
+
+#静态文件位置
+spring.thymeleaf.prefix=classpath:/templates/
