--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -52,3 +52,6 @@ matcher=/apiCall/**
 
 #ISOSTRconfig.xml位置
 ISOSTRconfigUrl=./ISOSTRconfig.xml
+
+#静态文件位置
+spring.thymeleaf.prefix=classpath:/templates/
