--- a/src/main/resources/application-all.properties
+++ b/src/main/resources/application-all.properties
@@ -5,3 +5,9 @@ spring.profiles.active=dev
 mybatis.configuration.cache-enabled=true
 
 spring.mvc.dispatch-options-request=true
+
+logging.config=classpath:logback-spring.xml
+#log日志配置
+#logging.file=/var/log/mylogs/springboot.log
+#logging.level.root=info
+#logging.level.org.springframework.web=info
