--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,17 @@ spring:
     #包含
     profiles:
       active: dev,all
-#日志
-logging:
-    config: classpath:logback-spring.xml
 feign:
     hystrix:
-        enabled: true
+      enabled: true
+#监控
+endpoints:
+  shutdown:
+    enabled: true
+    path: /ebe0cebaed984569a423c505984fd0e4
+    sensitive: false
+management:
+  security:
+    enabled: false
+  context-path: /monitor
 
